--- a/envconfig/epc/hybris/prod/apache/extra/httpd-vhosts.conf
+++ b/envconfig/epc/hybris/prod/apache/extra/httpd-vhosts.conf
@@ -27,20 +27,22 @@ NameVirtualHost orderportal.edgewell.com:443
 
 <VirtualHost orderportal.edgewell.com:80>
         ServerAdmin customerservice@epc.com
-        #DocumentRoot "W:\Apache2.2\htdocs"
+        DocumentRoot "W:\Apache2.2\htdocs"
         ServerName orderportal.edgewell.com
         #ServerAlias orderportal.edgewell.com 
-		
+	
+		#Alias / "W:\Apache2.2\htdocs\maintenance.html"
 		RewriteEngine on
 		ReWriteCond %{SERVER_PORT} !^443$
 		RewriteRule ^/(.*)$ https://%{HTTP_HOST}:443/$1 [NC,R,L]
         ProxyPass /_ui  !
+		
         ErrorLog logs/orderportal.edgewell-error.log
         CustomLog logs/orderportal.edgewell-access.log common
 </VirtualHost>
 <VirtualHost orderportal.edgewell.com:443>
         ServerAdmin customerservice@epc.com
-        #DocumentRoot "W:\Apache2.2\htdocs"
+        DocumentRoot "W:\Apache2.2\htdocs"
         ServerName orderportal.edgewell.com
         #ServerAlias orderportal.edgewell.com 
 
@@ -50,7 +52,7 @@ NameVirtualHost orderportal.edgewell.com:443
         SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM:+LOW
         SSLCertificateFile "W:\Apache2.2\conf\ssl\orderportal.edgewell.com.crt"
         SSLCertificateKeyFile "W:\Apache2.2\conf\ssl\EVB_wildcard.edgewell.com.key"
-		#SSLCertificateChainFile "W:\Apache2.2\conf\ssl\intermediateCertificate.crt"
+		SSLCertificateChainFile "W:\Apache2.2\conf\ssl\intermediate.crt"
 
 		RewriteEngine on
 		
@@ -61,7 +63,9 @@ NameVirtualHost orderportal.edgewell.com:443
         ProxyPass / https://hybrisportal.edgewell.com:9002/
         ProxyPassReverse / https://hybrisportal.edgewell.com:9002/
 
-		#Alias / "W:\Apache2.2\htdocs\maintainence.html"
+		#Alias / "W:\Apache2.2\htdocs\maintenance.html"
 		ErrorLog logs/ssl-orderportal.edgewell-error.log
         CustomLog logs/ssl-orderportal.edgewell-access.log common
 </VirtualHost>
+
+
