EPC , EHP prod changes

--- a/envconfig/ehp/hybris/prod/apache/conf/httpd.conf
+++ b/envconfig/ehp/hybris/prod/apache/conf/httpd.conf
@@ -43,7 +43,11 @@ ServerRoot "W:/Apache2.2"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
+#Alternate http port 8000
+#Listen 8000
 Listen 80
+#Alternate ssl port 8002
+#Listen 8002 
 Listen 443
 
 #
@@ -61,7 +65,7 @@ Listen 443
 LoadModule actions_module modules/mod_actions.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule asis_module modules/mod_asis.so
-#LoadModule auth_basic_module modules/mod_auth_basic.so
+LoadModule auth_basic_module modules/mod_auth_basic.so
 #LoadModule auth_digest_module modules/mod_auth_digest.so
 #LoadModule authn_alias_module modules/mod_authn_alias.so
 #LoadModule authn_anon_module modules/mod_authn_anon.so
@@ -94,7 +98,7 @@ LoadModule env_module modules/mod_env.so
 #LoadModule ext_filter_module modules/mod_ext_filter.so
 #LoadModule file_cache_module modules/mod_file_cache.so
 #LoadModule filter_module modules/mod_filter.so
-#LoadModule headers_module modules/mod_headers.so
+LoadModule headers_module modules/mod_headers.so
 #LoadModule ident_module modules/mod_ident.so
 #LoadModule imagemap_module modules/mod_imagemap.so
 LoadModule include_module modules/mod_include.so
@@ -115,7 +119,7 @@ LoadModule proxy_connect_module modules/mod_proxy_connect.so
 #LoadModule proxy_ftp_module modules/mod_proxy_ftp.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 #LoadModule proxy_scgi_module modules/mod_proxy_scgi.so
-#LoadModule reqtimeout_module modules/mod_reqtimeout.so
+LoadModule reqtimeout_module modules/mod_reqtimeout.so
 LoadModule rewrite_module modules/mod_rewrite.so
 LoadModule setenvif_module modules/mod_setenvif.so
 #LoadModule speling_module modules/mod_speling.so
@@ -161,7 +165,7 @@ Group daemon
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-#ServerAdmin customerservice@enr.com
+ServerAdmin global.econcierge@energizer.com
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
@@ -170,14 +174,14 @@ Group daemon
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-#ServerName qa.energizer.com
+ServerName orderportal.energizer.com
 
 #
 # DocumentRoot: The directory out of which you will serve your
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-#DocumentRoot "W:/Apache2.2/htdocs"
+DocumentRoot "W:/Apache2.2/htdocs"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -191,7 +195,7 @@ Group daemon
     Options FollowSymLinks
     AllowOverride None
     Order deny,allow
-    allow from all
+    Deny from all
 </Directory>
 
 #
@@ -217,10 +221,8 @@ Group daemon
     # http://httpd.apache.org/docs/2.2/mod/core.html#options
     # for more information.
     #
-    Options Indexes FollowSymLinks ExecCGI 
-	AddType text/html .html
-	AddOutputFilter INCLUDES .html
-	Options +Includes
+    Options Indexes FollowSymLinks
+
     #
     # AllowOverride controls what directives may be placed in .htaccess files.
     # It can be "All", "None", or any combination of the keywords:
@@ -261,7 +263,7 @@ Group daemon
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-ErrorLog "logs/qa.energizer.com-error.log"
+ErrorLog "logs/error.log"
 
 #
 # LogLevel: Control the number of messages logged to the error_log.
@@ -290,13 +292,13 @@ LogLevel warn
     # define per-<VirtualHost> access logfiles, transactions will be
     # logged therein and *not* in this file.
     #
-    CustomLog "logs/qa.energizer.com-access.log" common
+    #CustomLog "logs/access.log" common
 
     #
     # If you prefer a logfile with access, agent, and referer information
     # (Combined Logfile Format) you can use the following directive.
     #
-    #CustomLog "logs/qa.energizer.com-access.log" combined
+    #CustomLog "logs/access.log" combined
 </IfModule>
 
 <IfModule alias_module>
@@ -305,7 +307,7 @@ LogLevel warn
     # exist in your server's namespace, but do not anymore. The client 
     # will make a new request for the document at its new location.
     # Example:
-    # Redirect permanent /foo http://qa.energizer.com.com/bar
+    # Redirect permanent /foo http://orderportal.energizer.com/bar
 
     #
     # Alias: Maps web paths into filesystem paths and is used to
@@ -327,7 +329,7 @@ LogLevel warn
     # directives as to Alias.
     #
     ScriptAlias /cgi-bin/ "W:/Apache2.2/cgi-bin/"
-
+	Alias /_ui  "W:/Apache2.2/htdocs/_ui"
 </IfModule>
 
 <IfModule cgid_module>
@@ -423,7 +425,7 @@ DefaultType text/plain
 #ErrorDocument 500 "The server made a boo boo."
 #ErrorDocument 404 /missing.html
 #ErrorDocument 404 "/cgi-bin/missing_handler.pl"
-#ErrorDocument 402 http://qa.energizer.com.com/subscription_info.html
+#ErrorDocument 402 http://orderportal.energizer.com/subscription_info.html
 #
 
 #
