--- a/envconfig/epc/hybris/prod/apache/httpd.conf
+++ b/envconfig/epc/hybris/prod/apache/httpd.conf
@@ -169,7 +169,7 @@ ServerAdmin global.econcierge@energizer.com
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-ServerName distributorportal.edgewell.com
+ServerName orderportal.edgewell.com
 
 #
 # DocumentRoot: The directory out of which you will serve your
