--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -1515,7 +1515,8 @@ text.account.orderHistory.carrierName=Carrier Name
 text.account.orderHistory.orderNumber = Reference Number
 text.account.orderHistory.orderPlaced= Order Placed On 
 text.account.orderHistory.orderStatus =Order Status
-text.account.orderHistory.poNumber  =P.O.Number 
+text.account.orderHistory.poNumber  =P.O.Number
+text.approval.process.already.completed=This order reference is already approved by another approver. 
 
 text.account.quickorder.enterwholenumber=Enter a whole number
 text.account.quickorder.enterpositivenumber=Enter a positive number or non zero number
