commented columns in manage users and manage permissions pages. error messages changed as per Tuhinas comments

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -165,7 +165,7 @@ checkout.paymentMethod.createSubscription.failed=Failed to create subscription. 
 checkout.paymentMethod.noSecurityCode=Please provide security code.
 checkout.paymentMethod.notSelected=Please provide details of your payment for your order
 checkout.placeOrder.failed=Failed to place the order
-checkout.simulateOrder.failed=Failed to Simulate the order. Please try after some time.
+checkout.simulateOrder.failed=Failed to simulate order. Please try again after 30 minutes.
 checkout.security.code=Security Code
 checkout.summary.costCenter.editCostCenter=Edit Cost Center
 checkout.summary.costCenter.header=Cost Center
@@ -1516,7 +1516,7 @@ text.account.orderHistory.orderNumber = Reference Number
 text.account.orderHistory.orderPlaced= Order Placed On 
 text.account.orderHistory.orderStatus =Order Status
 text.account.orderHistory.poNumber  =P.O.Number
-text.approval.process.already.completed=This order reference is already approved by another approver. 
+text.approval.process.already.completed=This order reference is already approved/rejected by another approver. 
 
 text.account.quickorder.enterwholenumber=Enter a whole number
 text.account.quickorder.enterpositivenumber=Enter a positive number or non zero number
