--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -1531,7 +1531,7 @@ text.account.quickorder.entermoqmultiples=Enter multiples of MOQ(Minimum Orderdi
 text.account.quickorder.inputvalidnumber=Input a valid number
 
 text.account.quickorder.currentShippingPointInCart=Your cart currently has the Shipping Point : 
-account.password.expiry =Your Password has been Expired. Please Generate New Password.
-account.password.expiry.notification = Your Password expires in {0} days.
+account.password.expiry =Your password is expired. Please generate new password.
+account.password.expiry.notification = Your password expires in {0} days.
 
-account.password.isQuestionAnsSet = Please set Password Question and Answer
+account.password.isQuestionAnsSet = Please set password question and answer
