Updated BizTalk urls & email ids

--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -120,9 +120,9 @@ simulateTimeOutinSeconds=30
 #--------------------------------------------------------
 #Biz Talk URL for order simulate, create and report
 #--------------------------------------------------------
-simulateURL=http://10.99.13.61:8080/SalesOrderSimulate
-orderSubmitURL=http://10.99.13.61:8080/SalesOrderCreate
-invoicePdfURL=http://10.99.13.61:8080/GenerateURL
+simulateURL=http://ezBizTalk02.care.corp:8080/SalesOrderSimulate
+orderSubmitURL=http://ezBizTalk02.care.corp:8080/SalesOrderCreate
+invoicePdfURL=http://ezBizTalk02.care.corp:8080/GenerateURL
 
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
 feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID,SegmentName,FamilyName,GroupName
@@ -241,10 +241,10 @@ hmc.developermode=false
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com
-energizer.customer.support.from.email=epcvalidatione@gmail.com
-energizer.customer.support.to.email=epcvalidatione@gmail.com
-cronjobs.from.email=epcvalidatione@gmail.com
+fromEmailAddress.orderEmailSender=Erik.Villa@energizer.com
+energizer.customer.support.from.email=Erik.Villa@energizer.com
+energizer.customer.support.to.email=Erik.Villa@energizer.com)
+cronjobs.from.email=Erik.Villa@energizer.com
 
 #----------------- Non mandatory Apache settings ----------------------enable them only needed---#
 #tomcat.site.proxyName=energizer.com
