Set default ui experience property to desktop

--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -209,6 +209,12 @@ defaultLeadTime=30
 faq.page.url=/faq
 termsandconditions.page.url=/terms-and-conditions
 
+#------------------------------------------------
+# Set the default site to desktop UI experience
+#----------------------------------
+uiexperience.level.supported.houseHold=Desktop
+uiexperience.level.supported.personalCare=Desktop
+
 ####################################***** JVM Settings *************###############################
 tomcat.maxthreads=200
 tomcat.minsparethreads=50
