--- a/envconfig/ehp/hybris/prod/local-hybris.properties
+++ b/envconfig/ehp/hybris/prod/local-hybris.properties
@@ -208,6 +208,11 @@ defaultLeadTime=30
 faq.page.url=/faq
 termsandconditions.page.url=/terms-and-conditions
 
+#------------------------------------------------
+# Set the default site to desktop UI experience
+#----------------------------------
+uiexperience.level.supported.houseHold=Desktop
+uiexperience.level.supported.personalCare=Desktop
 
 ####################################***** JVM Settings *************###############################
 tomcat.maxthreads=200
