--- a/envconfig/epc/hybris/prod/apache/extra/httpd-vhosts.conf
+++ b/envconfig/epc/hybris/prod/apache/extra/httpd-vhosts.conf
@@ -35,7 +35,7 @@ NameVirtualHost orderportal.edgewell.com:443
 		RewriteEngine on
 		ReWriteCond %{SERVER_PORT} !^443$
 		RewriteRule ^/(.*)$ https://%{HTTP_HOST}:443/$1 [NC,R,L]
-        ProxyPass /_ui  !
+        #ProxyPass /_ui  !
 		
         ErrorLog logs/orderportal.edgewell-error.log
         CustomLog logs/orderportal.edgewell-access.log common
@@ -59,7 +59,7 @@ NameVirtualHost orderportal.edgewell.com:443
 		RewriteRule ^/?(reportcockpit|admincockpit|cscockpit|cmscockpit|productcockpit|mcc) -  [R=403,L,F]
 		RewriteRule ^/?(oci|solrfacetsearch|hmc|hmc_junit|text|acceleratorservices|rest) -  [R=403,L,F]
 		RewriteRule ^/?(test|maintenance|hac|hac_junit|virtualjdbc|backoffice|bmecat) -  [R=403,L,F]
-		ProxyPass /_ui  ! 
+		#ProxyPass /_ui  ! 
         ProxyPass / https://hybrisportal.edgewell.com:9002/
         ProxyPassReverse / https://hybrisportal.edgewell.com:9002/
 
