Changed the email-properties in local.properties file and configured to use in essentialdata-energizercronjobs.impex file

--- a/config/local.properties
+++ b/config/local.properties
@@ -46,6 +46,11 @@ interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
 
 #Mandatory Feeds for CSV Processors
 
+#properties for email address
+technical_EmailAddress=Surendra.na@mindtree.com
+business_EmailAddress=Surendra.na@mindtree.com
+email_Address=Surendra.na@mindtree.com
+
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
 feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,ERPMaterialID,UOM
