--- a/envconfig/ehp/hybris/prod/local-apache.properties
+++ b/envconfig/ehp/hybris/prod/local-apache.properties
@@ -54,6 +54,12 @@ interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
 
 #Mandatory Feeds for CSV Processors
 
+#properties for email address
+technical_EmailAddress=Margaret.Lang@Edgewell.com,Erik.Villa@energizer.com
+business_EmailAddress=DavidL.Kronmiller@Edgewell.com,Margaret.Lang@Edgewell.com,Erik.Villa@energizer.com
+email_Address=Erik.Villa@energizer.com
+
+
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
 feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
