--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -56,8 +56,8 @@ interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
 
 #properties for email address
 technical_EmailAddress=Margaret.Lang@Edgewell.com,Erik.Villa@energizer.com
-business_EmailAddress=DavidL.Kronmiller@Edgewell.com,Margaret.Lang@Edgewell.com,Erik.Villa@energizer.com
-email_Address=Erik.Villa@energizer.com
+business_EmailAddress=DavidL.Kronmiller@Edgewell.com
+email_Address=orderportal@edgewell.com
 
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
@@ -83,7 +83,7 @@ deliveryDateFormat=yyyyMMdd
 #------------------------------------------------------
 #From email address details for sending order email
 #------------------------------------------------------
-fromEmailDisplayName.orderEmailSender=Customer Service
+fromEmailDisplayName.orderEmailSender=Order Portal Team
 
 sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
@@ -252,10 +252,10 @@ hmc.developermode=false
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=Erik.Villa@energizer.com
-energizer.customer.support.from.email=Erik.Villa@energizer.com
-energizer.customer.support.to.email=Erik.Villa@energizer.com)
-cronjobs.from.email=Erik.Villa@energizer.com
+fromEmailAddress.orderEmailSender=orderportal@edgewell.com
+energizer.customer.support.from.email=orderportal@edgewell.com
+energizer.customer.support.to.email=Erik.Villa@edgewell.com
+cronjobs.from.email=orderportal@edgewell.com
 
 #----------------- Non mandatory Apache settings ----------------------enable them only needed---#
 #tomcat.site.proxyName=energizer.com
