Updated edgewell email-id

--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -55,8 +55,8 @@ interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
-technical_EmailAddress=Margaret.Lang@Edgewell.com,Erik.Villa@energizer.com
-business_EmailAddress=DavidL.Kronmiller@Edgewell.com
+technical_EmailAddress=Margaret.Lang@edgewell.com,Erik.Villa@edgewell.com
+business_EmailAddress=DavidL.Kronmiller@edgewell.com
 email_Address=orderportal@edgewell.com
 
 #Mandatory Feeds for OrderUpdate CSV Processor
