Changed the emailIds to orderportal@edgewell.com

--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -252,10 +252,10 @@ hmc.developermode=false
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=orderportal@edgewell.com
-energizer.customer.support.from.email=orderportal@edgewell.com
-energizer.customer.support.to.email=Erik.Villa@edgewell.com
-cronjobs.from.email=orderportal@edgewell.com
+fromEmailAddress.orderEmailSender=orderportal@edgewell.com 
+energizer.customer.support.from.email=orderportal@edgewell.com 
+energizer.customer.support.to.email=orderportal@edgewell.com 
+cronjobs.from.email=orderportal@edgewell.com 
 
 #----------------- Non mandatory Apache settings ----------------------enable them only needed---#
 #tomcat.site.proxyName=energizer.com
