--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -84,7 +84,7 @@ deliveryDateFormat=yyyyMMdd
 #------------------------------------------------------
 #From email address details for sending order email
 #------------------------------------------------------
-fromEmailDisplayName.orderEmailSender=Customer Service
+fromEmailDisplayName.orderEmailSender=Order Portal Team
 
 sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
@@ -255,7 +255,7 @@ tomcat.ajp.useipv=true
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com
-energizer.customer.support.from.email=epcvalidatione@gmail.com
-energizer.customer.support.to.email=epcvalidatione@gmail.com
-cronjobs.from.email=epcvalidatione@gmail.com
+fromEmailAddress.orderEmailSender=orderportal@edgewell.com 
+energizer.customer.support.from.email=orderportal@edgewell.com 
+energizer.customer.support.to.email=orderportal@edgewell.com 
+cronjobs.from.email=orderportal@edgewell.com 
