--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -84,7 +84,7 @@ deliveryDateFormat=yyyyMMdd
 #------------------------------------------------------
 #From email address details for sending order email
 #------------------------------------------------------
-fromEmailDisplayName.orderEmailSender=Customer Service
+fromEmailDisplayName.orderEmailSender=Order Portal Team
 
 sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
@@ -253,13 +253,11 @@ proxy.ssl.port=443
 #Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
 tomcat.ajp.useipv=true
 
+
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com
-
-energizer.customer.support.from.email=epcvalidatione@gmail.com
-
-energizer.customer.support.to.email=epcvalidatione@gmail.com
-
-cronjobs.from.email=epcvalidatione@gmail.com
+fromEmailAddress.orderEmailSender=orderportal@edgewell.com 
+energizer.customer.support.from.email=orderportal@edgewell.com 
+energizer.customer.support.to.email=orderportal@edgewell.com 
+cronjobs.from.email=orderportal@edgewell.com 
