--- a/envconfig/epc/hybris/prod/local-apache.properties
+++ b/envconfig/epc/hybris/prod/local-apache.properties
@@ -83,7 +83,7 @@ deliveryDateFormat=yyyyMMdd
 #------------------------------------------------------
 #From email address details for sending order email
 #------------------------------------------------------
-fromEmailDisplayName.orderEmailSender=Customer Service
+fromEmailDisplayName.orderEmailSender=Order Portal Team
 
 sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 
@@ -242,14 +242,13 @@ cronjob.maxthreads=50
 hmc.debug.showjspcomments=false
 hmc.developermode=false
 
-
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com
-energizer.customer.support.from.email=epcvalidatione@gmail.com
-energizer.customer.support.to.email=epcvalidatione@gmail.com
-cronjobs.from.email=epcvalidatione@gmail.com
+fromEmailAddress.orderEmailSender=orderportal@edgewell.com 
+energizer.customer.support.from.email=orderportal@edgewell.com 
+energizer.customer.support.to.email=orderportal@edgewell.com 
+cronjobs.from.email=orderportal@edgewell.com 
 
 #----------------- Non mandatory Apache settings ----------------------enable them only needed---#
 #tomcat.site.proxyName=energizer.com
