Added Password Regex Pattern in Form Java classes and changed previousPasswordCounter to 6

--- a/config/local.properties
+++ b/config/local.properties
@@ -76,9 +76,11 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 #Shared file location
 
 sharedFolderPath=D:\\CSVFeedFolder
+
+# Password Properties
 passwordExpiryDays = 30
 passwordNotificationDays = 10
-previousPasswordCount=5
+previousPasswordCount=6
 passwordDelimiter=|
 
 # Container volume in M3 and weight in KG
