Updated local.properties files for all the environments.

--- a/envconfig/epc/hybris/prod/local-apache.properties
+++ b/envconfig/epc/hybris/prod/local-apache.properties
@@ -51,13 +51,13 @@ interfaceType_LeadTime=energizerCustomerLeadTimeCSVProcessor
 interfaceType_EnergizerOfflineOrder=energizerOfflineOrderCSVProcessor
 interfaceType_EnergizerOrderUpdate=energizerOrderUpdateCSVProcessor
 interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
-
+interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
-technical_EmailAddress=Margaret.Lang@Edgewell.com,Erik.Villa@energizer.com
-business_EmailAddress=DavidL.Kronmiller@Edgewell.com,Margaret.Lang@Edgewell.com,Erik.Villa@energizer.com
-email_Address=Erik.Villa@energizer.com
+technical_EmailAddress=Margaret.Lang@edgewell.com,Erik.Villa@edgewell.com
+business_EmailAddress=DavidL.Kronmiller@edgewell.com
+email_Address=orderportal@edgewell.com
 
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
@@ -92,7 +92,14 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 #------------------------------------------------------
 sharedFolderPath=W:\\CSVFeedFolder
 
-#------------------------------------------------------
+
+
+# Password Properties
+passwordExpiryDays = 30
+passwordNotificationDays = 10
+previousPasswordCount=6
+passwordDelimiter=|
+
 # Container volume in M3 and weight in KG
 #------------------------------------------------------
 twenty.feet.container.volume=30.44056
@@ -125,9 +132,9 @@ simulateTimeOutinSeconds=30
 #--------------------------------------------------------
 #Biz Talk URL for order simulate, create and report
 #--------------------------------------------------------
-simulateURL=http://10.99.13.61:8080/SalesOrderSimulate
-orderSubmitURL=http://10.99.13.61:8080/SalesOrderCreate
-invoicePdfURL=http://10.99.13.61:8080/GenerateURL
+simulateURL=http://ezBizTalk02.care.corp:8080/SalesOrderSimulate
+orderSubmitURL=http://ezBizTalk02.care.corp:8080/SalesOrderCreate
+invoicePdfURL=http://ezBizTalk02.care.corp:8080/GenerateURL
 
 feedprocessor.materialcategoryfeed.headers=ERPMaterialID,SegmentName,SegmentDescription,FamilyName,FamilyDescription,GroupName,GroupDescription,SubGroupName,SubGroupDescription
 feedprocessor.materialcategoryfeed.headers.mandatory=ERPMaterialID,SegmentName,FamilyName,GroupName
@@ -145,10 +152,10 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 #---------------------------------------------
 #website url
 #---------------------------------------------
-website.personalCare.http=http://distributorportal.edgewell.com
-website.personalCare.https=https://distributorportal.edgewell.com
-media.personalCare.http=http://distributorportal.edgewell.com
-media.personalCare.https=https://distributorportal.edgewell.com
+website.personalCare.http=http://orderportal.edgewell.com
+website.personalCare.https=https://orderportal.edgewell.com
+media.personalCare.http=http://orderportal.edgewell.com
+media.personalCare.https=https://orderportal.edgewell.com
 
 storefront.security.default.required.channel=https
 
@@ -190,8 +197,8 @@ b2BBudget.Code=1000
 b2BBudget.Name=Print Unit Name Here
 b2BBudget.Isocode=USD
 b2BBudget.StartDate=04/15/2015
-b2BBudget.EndDate=04/15/2021
-b2BBudget.Budget=1000
+b2BBudget.EndDate=04/15/2099
+b2BBudget.Budget=1000000000
 
 #------------------------------------------
 # set the default B2BUnit cost center	  #
@@ -213,6 +220,12 @@ defaultLeadTime=30
 #------------------------------------------
 faq.page.url=/faq
 termsandconditions.page.url=/terms-and-conditions
+
+#------------------------------------------------
+# Set the default site to desktop UI experience
+#----------------------------------
+uiexperience.level.supported.houseHold=Desktop
+uiexperience.level.supported.personalCare=Desktop
 
 ####################################***** JVM Settings *************###############################
 tomcat.maxthreads=200
