--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -51,7 +51,7 @@ interfaceType_LeadTime=energizerCustomerLeadTimeCSVProcessor
 interfaceType_EnergizerOfflineOrder=energizerOfflineOrderCSVProcessor
 interfaceType_EnergizerOrderUpdate=energizerOrderUpdateCSVProcessor
 interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
-
+interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
@@ -92,7 +92,14 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 #------------------------------------------------------
 sharedFolderPath=W:\\CSVFeedFolder
 
-#------------------------------------------------------
+
+
+# Password Properties
+passwordExpiryDays = 30
+passwordNotificationDays = 10
+previousPasswordCount=6
+passwordDelimiter=|
+
 # Container volume in M3 and weight in KG
 #------------------------------------------------------
 twenty.feet.container.volume=30.44056
@@ -145,11 +152,10 @@ feedprocessor.productcategoryrelationfeed.headers.mandatory=MappingCode,Level1
 #---------------------------------------------
 #website url
 #---------------------------------------------
-website.personalCare.http=http://hybrisportal.edgewell.com:9001
-website.personalCare.https=https://hybrisportal.edgewell.com:9002
-media.personalCare.http=http://hybrisportal.edgewell.com:9001
-media.personalCare.https=https://hybrisportal.edgewell.com:9002
-
+website.personalCare.http=http://orderportal.edgewell.com
+website.personalCare.https=https://orderportal.edgewell.com
+media.personalCare.http=http://orderportal.edgewell.com
+media.personalCare.https=https://orderportal.edgewell.com
 storefront.security.default.required.channel=https
 
 #----------------------------------
@@ -190,8 +196,8 @@ b2BBudget.Code=1000
 b2BBudget.Name=Print Unit Name Here
 b2BBudget.Isocode=USD
 b2BBudget.StartDate=04/15/2015
-b2BBudget.EndDate=04/15/2016
-b2BBudget.Budget=1000
+b2BBudget.EndDate=04/15/2099
+b2BBudget.Budget=1000000000
 
 #------------------------------------------
 # set the default B2BUnit cost center	  #
