--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -9,7 +9,7 @@ hac.webroot=/hac
 energizerstorefront.webroot=
 b2bStorefrontContextRoot=
 
-installed.tenants=t1,junit
+installed.tenants=t1
 
 lang.packs=en,es
 
@@ -51,7 +51,7 @@ interfaceType_LeadTime=energizerCustomerLeadTimeCSVProcessor
 interfaceType_EnergizerOfflineOrder=energizerOfflineOrderCSVProcessor
 interfaceType_EnergizerOrderUpdate=energizerOrderUpdateCSVProcessor
 interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
-
+interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
@@ -62,7 +62,7 @@ email_Address=Surendra.na@mindtree.com
 
 #Mandatory Feeds for OrderUpdate CSV Processor
 #Basic Mandatory feeds for OrderUpdate CSV Processor are Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
-feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,ERPMaterialID,UOM
+feedprocessor.energizerOrderUpdateFeed.mandatory=Status,SAPOrderNo,HybrisOrderNo,ERPMaterialID,UOM
 
 
 #Mandatory Feeds for OfflineOrder CSV Processor
@@ -93,7 +93,14 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 #------------------------------------------------------
 sharedFolderPath=W:\\CSVFeedFolder
 
-#------------------------------------------------------
+
+
+# Password Properties
+passwordExpiryDays = 30
+passwordNotificationDays = 10
+previousPasswordCount=6
+passwordDelimiter=|
+
 # Container volume in M3 and weight in KG
 #------------------------------------------------------
 twenty.feet.container.volume=30.44056
@@ -177,6 +184,10 @@ log4j.appender.FILE.MaxFileSize=10MB
 #----------------------------------
 b2b.MaxUserLimit=10
 
+#----------------------------------
+# Set the default B2B Unit lead time
+#----------------------------------
+default.lead.time.value=30
 
 #------------------------------------------------------------------------
 # set the default B2BUnit Budget & Date format mm/dd/yyyy	  			#
@@ -209,6 +220,12 @@ defaultLeadTime=30
 #------------------------------------------
 faq.page.url=/faq
 termsandconditions.page.url=/terms-and-conditions
+
+#------------------------------------------------
+# Set the default site to desktop UI experience
+#----------------------------------
+uiexperience.level.supported.houseHold=Desktop
+uiexperience.level.supported.personalCare=Desktop
 
 ####################################***** JVM Settings *************###############################
 tomcat.maxthreads=200
@@ -255,7 +272,7 @@ tomcat.ajp.useipv=true
 #------------------------------------------------------------------------------------------
 # Email Properties
 #------------------------------------------------------------------------------------------
-fromEmailAddress.orderEmailSender=orderportal@edgewell.com 
-energizer.customer.support.from.email=orderportal@edgewell.com 
-energizer.customer.support.to.email=orderportal@edgewell.com 
-cronjobs.from.email=orderportal@edgewell.com 
+fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com 
+energizer.customer.support.from.email=epcvalidatione@gmail.com 
+energizer.customer.support.to.email=epcvalidatione@gmail.com 
+cronjobs.from.email=epcvalidatione@gmail.com 
