1->change reverted from base.properties and base_en.properties files as it was only required for EHP
2->syntax error in ExcelUploadPageController.java is resolved now.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base.properties
@@ -85,7 +85,7 @@ basket.page.prdCode=Product
 basket.page.cmirId=Customer Material ID
 basket.page.shipFrom=Ship From
 basket.page.uom=Unit Of Ordering
-basket.page.baseuom.convertion=Number of Units of Sale
+basket.page.baseuom.convertion=No Of Each
 basket.page.moq=Minimum Ordering Quantity
 basket.page.customerMaterialId=Customer Material ID
 basket.page.customerProductName=Customer Product Name
@@ -1519,7 +1519,7 @@ text.account.orderHistory.approvalStatus= Status
 text.account.orderHistory.orderValue=Order Value
 text.account.orderHistory.shippingDetaiils=Shipping Details
 text.account.orderHistory.containerNumber=Container Number
-text.account.orderHistory.carrierName=Vessel/Voyage Number
+text.account.orderHistory.carrierName=Carrier Name
 text.account.orderHistory.orderNumber = Reference Number
 text.account.orderHistory.orderPlaced= Order Placed On 
 text.account.orderHistory.orderStatus =Order Status
