--- a/config/local.properties
+++ b/config/local.properties
@@ -276,3 +276,7 @@ fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com
 energizer.customer.support.from.email=epcvalidatione@gmail.com 
 energizer.customer.support.to.email=epcvalidatione@gmail.com 
 cronjobs.from.email=epcvalidatione@gmail.com 
+
+#ICS email props
+ICS.EMAILID=Surendra.NA@mindtree.com
+ICS.DISPLAYNAME=order approved
