1->ICS member email-id and display name added to local.properties 2->ics member will also be receiving an email on order getting approved(refer energizeremailgenerationservice.java)

--- a/config/local.properties
+++ b/config/local.properties
@@ -279,4 +279,4 @@ cronjobs.from.email=epcvalidatione@gmail.com
 
 #ICS email props
 ICS.EMAILID=Surendra.NA@mindtree.com
-ICS.DISPLAYNAME=order approved
+ICS.DISPLAYNAME="ICS-MEMBER"
