1->customeruserlistjob added 2->customerUserListPath configured in local.properties

--- a/config/local.properties
+++ b/config/local.properties
@@ -93,6 +93,11 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 #------------------------------------------------------
 sharedFolderPath=W:\\CSVFeedFolder
 
+#-----------------------------------------------------
+#customeruserslist location
+customerUserListPath=D:\\userlists
+
+
 # Password Properties
 passwordExpiryDays = 30
 passwordNotificationDays = 10
