1->EnergizerCustomerUsersListJob.java added 2->customerUserListPath configured in local.properties file

--- a/config/local.properties
+++ b/config/local.properties
@@ -95,7 +95,7 @@ sharedFolderPath=W:\\CSVFeedFolder
 
 #-----------------------------------------------------
 #customeruserslist location
-customerUserListPath=D:\\userlists
+customerUserListPath=w:\\userlists
 
 
 # Password Properties
