Following changes have been made: 1) ICS config and customeruserlist path in local.properties. 2) defect in order pending approval email have been resolved

--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -93,6 +93,9 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 sharedFolderPath=W:\\CSVFeedFolder
 
 
+#CustomerUsersList Location
+
+customerUserListPath=W:\\userlists
 
 # Password Properties
 passwordExpiryDays = 30
@@ -262,6 +265,10 @@ fromEmailAddress.orderEmailSender=orderportal@edgewell.com
 energizer.customer.support.from.email=orderportal@edgewell.com 
 energizer.customer.support.to.email=orderportal@edgewell.com 
 cronjobs.from.email=orderportal@edgewell.com 
+
+#ICS email props
+ICS.EMAILID=Surendra.NA@mindtree.com
+ICS.DISPLAYNAME="ICS-MEMBER"
 
 #----------------- Non mandatory Apache settings ----------------------enable them only needed---#
 #tomcat.site.proxyName=energizer.com
