--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -93,7 +93,9 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 #------------------------------------------------------
 sharedFolderPath=W:\\CSVFeedFolder
 
+#CustomerUsersList Location
 
+customerUserListPath=W:\\userlists
 
 # Password Properties
 passwordExpiryDays = 30
@@ -276,3 +278,7 @@ fromEmailAddress.orderEmailSender=epcvalidatione@gmail.com
 energizer.customer.support.from.email=epcvalidatione@gmail.com 
 energizer.customer.support.to.email=epcvalidatione@gmail.com 
 cronjobs.from.email=epcvalidatione@gmail.com 
+
+#ICS email props
+ICS.EMAILID=Shweta.Sharma@mindtree.com
+ICS.DISPLAYNAME="ICS-MEMBER"
