changes have been made: 1)Triggering time for EnergizerCMIRMonitorCronjob have been made 8:00 daily. 2)ICS member name changed in Local.properties file in envconfig/prod
-------------shweta--------------------------------

--- a/envconfig/epc/hybris/prod/local-apache.properties
+++ b/envconfig/epc/hybris/prod/local-apache.properties
@@ -268,7 +268,7 @@ energizer.customer.support.to.email=orderportal@edgewell.com
 cronjobs.from.email=orderportal@edgewell.com 
 
 #ICS email props
-ICS.EMAILID=Surendra.NA@mindtree.com
+ICS.EMAILID=Erik.Villa@edgewell.com
 ICS.DISPLAYNAME="ICS-MEMBER"
 
 #----------------- Non mandatory Apache settings ----------------------enable them only needed---#
