Following changes have been made: 1)changes related to catalog download 2)changes related to Quick order session 3)Email environment configured in local.properties of dev and qa under envconfig folder

--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -97,6 +97,11 @@ sharedFolderPath=W:\\CSVFeedFolder
 
 customerUserListPath=W:\\userlists
 
+#Catalog Download File Path
+
+
+catalogdownload.downloadPath=Downloads
+
 # Password Properties
 passwordExpiryDays = 30
 passwordNotificationDays = 10
@@ -284,3 +289,6 @@ cronjobs.from.email=epcvalidatione@gmail.com
 #ICS email props
 ICS.EMAILID=Shweta.Sharma@mindtree.com
 ICS.DISPLAYNAME="ICS-MEMBER"
+
+#Enviorment 
+mail.enviorment=dev
