--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -97,6 +97,10 @@ sharedFolderPath=W:\\CSVFeedFolder
 
 customerUserListPath=W:\\userlists
 
+#Catalog Download File Path
+
+catalogdownload.downloadPath=Downloads
+
 # Password Properties
 passwordExpiryDays = 30
 passwordNotificationDays = 10
