1-> mail enviroment set added in local. properties file 2->password expiry days extended to 120 days.

--- a/envconfig/ehp/hybris/qas/local.properties
+++ b/envconfig/ehp/hybris/qas/local.properties
@@ -241,3 +241,6 @@ fromEmailAddress.orderEmailSender=ehpvalidation@gmail.com
 energizer.customer.support.from.email=ehpvalidation@gmail.com
 energizer.customer.support.to.email=ehpvalidation@gmail.com
 cronjobs.from.email=ehpvalidation@gmail.com
+
+#Enviorment 
+mail.enviorment=QA
