--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -274,6 +274,9 @@ cronjobs.from.email=orderportal@edgewell.com
 ICS.EMAILID=Erik.Villa@edgewell.com
 ICS.DISPLAYNAME="ICS-MEMBER"
 
+#Enviorment 
+mail.enviorment=
+
 #----------------- Non mandatory Apache settings ----------------------enable them only needed---#
 #tomcat.site.proxyName=energizer.com
 #tomcat.site.hostName=live.energizer.com
