--- a/envconfig/ehp/hybris/dev/local.properties
+++ b/envconfig/ehp/hybris/dev/local.properties
@@ -242,3 +242,6 @@ fromEmailAddress.orderEmailSender=ehpvalidation@gmail.com
 energizer.customer.support.from.email=ehpvalidation@gmail.com
 energizer.customer.support.to.email=ehpvalidation@gmail.com
 cronjobs.from.email=ehpvalidation@gmail.com
+
+#Enviorment 
+mail.enviorment=dev
