--- a/envconfig/ehp/hybris/prod/local-apache.properties
+++ b/envconfig/ehp/hybris/prod/local-apache.properties
@@ -253,6 +253,9 @@ energizer.customer.support.to.email=ehpvalidation@gmail.com
 cronjobs.from.email=ehpvalidation@gmail.com
 
 
+#Enviorment 
+mail.enviorment=
+
 #----------------- Non mandatory Apache settings ----------------------enable them only needed---#
 #tomcat.site.proxyName=energizer.com
 #tomcat.site.hostName=live.energizer.com
