--- a/envconfig/ehp/hybris/prod/local-hybris.properties
+++ b/envconfig/ehp/hybris/prod/local-hybris.properties
@@ -257,6 +257,8 @@ energizer.customer.support.from.email=Leandro.Tarachuk@energizer.com
 energizer.customer.support.to.email=Leandro.Tarachuk@energizer.com
 cronjobs.from.email=Leandro.Tarachuk@energizer.com
 
+#Enviorment 
+mail.enviorment=
 
 #----------------- Non mandatory Apache settings ----------------------enable them only needed---#
 #tomcat.site.proxyName=energizer.com
