--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -102,7 +102,7 @@ customerUserListPath=W:\\userlists
 catalogdownload.downloadPath=Downloads
 
 # Password Properties
-passwordExpiryDays = 30
+passwordExpiryDays = 120
 passwordNotificationDays = 10
 previousPasswordCount=6
 passwordDelimiter=|
@@ -288,4 +288,4 @@ ICS.EMAILID=Shweta.Sharma@mindtree.com
 ICS.DISPLAYNAME="ICS-MEMBER"
 
 #Enviorment 
-mail.enviorment=qa
+mail.enviorment=Qa
