Changed email ids

--- a/config/local.properties
+++ b/config/local.properties
@@ -55,9 +55,9 @@ interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
-technical_EmailAddress=Surendra.na@mindtree.com
-business_EmailAddress=Surendra.na@mindtree.com
-email_Address=Surendra.na@mindtree.com
+technical_EmailAddress=Siddaraju.Nagappa@mindtree.com
+business_EmailAddress=Siddaraju.Nagappa@mindtree.com
+email_Address=Siddaraju.Nagappa@mindtree.com
 
 
 #Mandatory Feeds for OrderUpdate CSV Processor
@@ -283,7 +283,7 @@ energizer.customer.support.to.email=epcvalidatione@gmail.com
 cronjobs.from.email=epcvalidatione@gmail.com 
 
 #ICS email props
-ICS.EMAILID=Surendra.NA@mindtree.com
+ICS.EMAILID=Siddaraju.Nagappa@mindtree.com
 ICS.DISPLAYNAME="ICS-MEMBER"
 
 #Enviorment 
