--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -109,6 +109,10 @@ passwordDelimiter=|
 
 # Container volume in M3 and weight in KG
 #------------------------------------------------------
+energizer.default.packingOption=1 SLIP SHEET AND 1 WOODEN BASE
+possiblePackingOptions=2 SLIP SHEETS,1 SLIP SHEET AND 1 WOODEN BASE, 2 WOODEN BASE
+possibleContainerHeights=20FT,40FT
+
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
 fourty.feet.container.volume=70.62209
