Files related to new cronjob(for adding product dimensions via csv file) are committed ---shweta

--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -52,6 +52,8 @@ interfaceType_EnergizerOfflineOrder=energizerOfflineOrderCSVProcessor
 interfaceType_EnergizerOrderUpdate=energizerOrderUpdateCSVProcessor
 interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
 interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
+interfaceType_EnergizerProductDimension=energizerProductDimensionCSVProcessor
+
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
