--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -52,6 +52,8 @@ interfaceType_EnergizerOfflineOrder=energizerOfflineOrderCSVProcessor
 interfaceType_EnergizerOrderUpdate=energizerOrderUpdateCSVProcessor
 interfaceType_EnergizerProductCategory=energizerProductHierarchyCSVProcessor
 interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
+interfaceType_EnergizerProductDimension=energizerProductDimensionCSVProcessor
+
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
