--- a/envconfig/epc/hybris/dev/local.properties
+++ b/envconfig/epc/hybris/dev/local.properties
@@ -112,6 +112,7 @@ passwordDelimiter=|
 
 # Container volume in M3 and weight in KG
 #------------------------------------------------------
+energizer.default.containerHeight=40FT
 energizer.default.packingOption=1 SLIP SHEET AND 1 WOODEN BASE
 possiblePackingOptions=2 SLIP SHEETS,1 SLIP SHEET AND 1 WOODEN BASE, 2 WOODEN BASE
 possibleContainerHeights=20FT,40FT
