Changes related to update,enable/disable container Optimization is made

--- a/envconfig/epc/hybris/prod/local-apache.properties
+++ b/envconfig/epc/hybris/prod/local-apache.properties
@@ -112,9 +112,13 @@ passwordDelimiter=|
 
 # Container volume in M3 and weight in KG
 #------------------------------------------------------
+energizer.default.containerHeight=40FT
 energizer.default.packingOption=1 SLIP SHEET AND 1 WOODEN BASE
-possiblePackingOptions=2 SLIP SHEETS,1 SLIP SHEET AND 1 WOODEN BASE, 2 WOODEN BASE
-possibleContainerHeights=20FT,40FT
+possiblePackingOptions=1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE,2 SLIP SHEETS
+possibleContainerHeights=40FT,20FT
+
+heightInInches.40FT=110
+heightInInches.20FT=50
 
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
