changes to enable /disable from hmc

--- a/envconfig/epc/hybris/prod/local-hybris.properties
+++ b/envconfig/epc/hybris/prod/local-hybris.properties
@@ -116,8 +116,9 @@ energizer.default.packingOption=1 SLIP SHEET AND 1 WOODEN BASE
 possiblePackingOptions=1 SLIP SHEET AND 1 WOODEN BASE, 2 WOODEN BASE,2 SLIP SHEETS
 possibleContainerHeights=40FT,20FT
 
-heightInInches.40FT=110
-heightInInches.20FT=50
+heightInInches.40FT=102
+heightInInches.20FT=87
+reduced.height=12.7
 
 twenty.feet.container.volume=30.44056
 twenty.feet.container.weight=15961.90248
