--- a/envconfig/epc/hybris/qas/local.properties
+++ b/envconfig/epc/hybris/qas/local.properties
@@ -115,6 +115,7 @@ energizer.default.containerHeight=40FT
 energizer.default.packingOption=1 SLIP SHEET AND 1 WOODEN BASE
 possiblePackingOptions=1 SLIP SHEET AND 1 WOODEN BASE,2 WOODEN BASE,2 SLIP SHEETS
 possibleContainerHeights=40FT,20FT
+energizer.disable.packingOption=2 SLIP SHEETS
 
 heightInInches.40FT=102
 heightInInches.20FT=87
