NA_POC related files

--- a/config/local.properties
+++ b/config/local.properties
@@ -55,9 +55,9 @@ interfaceType_EnergizerPasswordExpiry=energizerPasswordExpiryJob
 #Mandatory Feeds for CSV Processors
 
 #properties for email address
-technical_EmailAddress=Siddaraju.Nagappa@mindtree.com
-business_EmailAddress=Siddaraju.Nagappa@mindtree.com
-email_Address=Siddaraju.Nagappa@mindtree.com
+technical_EmailAddress=Anitha.Shastry@mindtree.com
+business_EmailAddress=Anitha.Shastry@mindtree.com
+email_Address=Anitha.Shastry@mindtree.com
 
 
 #Mandatory Feeds for OrderUpdate CSV Processor
@@ -91,7 +91,7 @@ sendEmailForOrderStatus=IN_PROCESS,SHIPPED,CANCELLED
 #------------------------------------------------------
 #Shared file location
 #------------------------------------------------------
-sharedFolderPath=W:\\CSVFeedFolder
+sharedFolderPath=D:\\CSVDumps\\Prod\\CSVFeedFolder_205\\CSVFeedFolder
 
 #-----------------------------------------------------
 #customeruserslist location
@@ -161,15 +161,12 @@ website.personalCare.https=https://dev.edgewell.com:9002
 media.personalCare.http=http://dev.edgewell.com:9001
 media.personalCare.https=https://dev.edgewell.com:9002
 
-storefront.security.default.required.channel=https
+website.personalCareNA.http=http://dev.edgewellna.com:9001
+website.personalCareNA.https=https://dev.edgewellna.com:9002
+media.personalCareNA.http=http://dev.edgewellna.com:9001
+media.personalCareNA.https=https://dev.edgewellna.com:9002
 
-#----------------------------------
-#Oracle DB setup Information
-#----------------------------------
-db.url=jdbc:oracle:thin:@10.98.1.210:1521:hbd
-db.driver=oracle.jdbc.driver.OracleDriver
-db.username=hybris
-db.password=hybris
+storefront.security.default.required.channel=https
 
 #----------------------------------
 # Default value of MOQ  and  Lead Time
@@ -261,14 +258,14 @@ hmc.developermode=false
 #------------------------------------------------------------------------------------------
 # Proxy and port Properties
 #------------------------------------------------------------------------------------------
-tomcat.site.proxyName=dev.edgewell.com
-tomcat.site.hostName=edgewell.dev.com
+#tomcat.site.proxyName=dev.edgewell.com
+#tomcat.site.hostName=edgewell.dev.com
 
 # The port that proxy Apache server instance uses for unsecured connections. This is the publicly accessible HTTP port.
-proxy.http.port=80
+#proxy.http.port=80
 
 # The port that proxy Apache server instance uses for SSL-secured connections. This is the publicly accessible HTTPS port.
-proxy.ssl.port=443
+#proxy.ssl.port=443
 
 #Set this attribute to true to cause Tomcat to use the ServerName passed by the native web server to determine the Host to send the request to. If no attribute given, default value is false.
 tomcat.ajp.useipv=true
@@ -283,8 +280,10 @@ energizer.customer.support.to.email=epcvalidatione@gmail.com
 cronjobs.from.email=epcvalidatione@gmail.com 
 
 #ICS email props
-ICS.EMAILID=Siddaraju.Nagappa@mindtree.com
+ICS.EMAILID=Anitha.Shastry@mindtree.com
 ICS.DISPLAYNAME="ICS-MEMBER"
 
 #Enviorment 
 mail.enviorment=dev
+
+log4j.logger.de.hybris.platform.solrfacetsearch.search.impl.DefaultFacetSearchService=DEBUG
